# claude-code-mux

./: .env.example  .gitmodules  Cargo.toml  README.md  edit_job.toml  plan.md
.gemini/tmp/code_editor_temp/: handlers_full.rs.tmp  handlers_get_config.rs.tmp  handlers_get_config_json.rs.tmp  handlers_get_models.rs.tmp  handlers_get_models_config.rs.tmp  handlers_get_providers.rs.tmp  handlers_handle_count_tokens.rs.tmp  handlers_handle_messages.rs.tmp  handlers_handle_openai_chat_completions.rs.tmp  handlers_health_check.rs.tmp  handlers_imports.rs.tmp  handlers_serve_admin.rs.tmp  handlers_update_config.rs.tmp  handlers_update_config_json.rs.tmp  mod.rs.tmp  oauth_handlers.rs.tmp  state.rs.tmp  utils.rs.tmp
.github/workflows/: release.yml
code_editor/: Cargo.toml
code_editor/src/: main.rs
config/: claude-max-oauth.example.toml
docs/: OAUTH_SETUP.md  OAUTH_TESTING.md
examples/: oauth_login.rs
refactor_server_mod/: Cargo.toml
refactor_server_mod/src/: main.rs
src/: config.rs  lib.rs  logging.rs  main.rs  reqwest_simd_json.rs
src/auth/: mod.rs  oauth.rs  token_store.rs
src/cli/: mod.rs
src/providers/: anthropic_compatible.rs  error.rs  gemini.rs  mod.rs  openai.rs  registry.rs
src/router/: mod.rs
src/server/: admin.html  config_update.rs  error.rs  handlers.rs  logs.rs  mod.rs  oauth_handlers.rs  openai_compat.rs  state.rs
src/telemetry/: mod.rs
tests/: logging.rs
